hphp/test/zend/good/tests/classes/bug29446.php.expectf

Fatal error: Cannot redeclare testClass::TEST_CONST in %s/bug29446.php on line 5
